# social-website

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: pr_test_actions.yml  run-lint-and-test.yml
docs/: account.md  active.md  follow.md  image.md
webapp/: .coveragerc  exceptions.py  pytest.ini
webapp/account/: authentication.py  factory.py  forms.py  models.py  urls.py  views.py
webapp/account/migrations/: 0001_initial.py  0002_contact.py
webapp/account/templates/: base.html
webapp/account/templates/account/: dashboard.html  login.html  register.html  register_done.html
webapp/account/templates/registration/: logged_out.html  login.html  password_reset_confirm.html
webapp/account/tests/: test_forms.py  test_views.py
webapp/actions/: admin.py  models.py  utils.py
webapp/actions/migrations/: 0001_initial.py
webapp/config/: tests.py  urls.py
webapp/config/settings/: base.py  local.py  prod.py  test.py
webapp/images/: apps.py  factory.py  form.py  forms.py  models.py  signals.py  urls.py  views.py
webapp/images/migrations/: 0001_initial.py  0002_image_users_like.py  0003_image_total_likes_and_more.py
webapp/images/templates/images/image/: detail.html  list.html  list_images.html  ranking.html
webapp/tests/account/: test_authentication.py  test_forms.py  test_views.py
webapp/tests/images/: test_forms.py  test_views.py
