[tool.poetry]
name = "py-template-repo"
version = "0.1.0"
description = ""
authors = ["jslee <dlwhdtjd098@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.lint.dependencies]
flake8 = ">=7.0.0,<7.1.0"
pyright = ">=1.1.358,<1.2.0"
ruff = ">=0.3.7,<0.4.0"
reorder-python-imports = ">=3.12.0,<3.13.0"
pre-commit = ">=3.7.0,<3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
